--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mvc-sample",
+  "name": "eslint",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "dotenv": "^15.0.0",
-    "eslint": "^8.8.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-pug": "^1.2.4",
     "jest": "^27.4.7",
@@ -54,5 +54,21 @@
     "pug-lint": "^2.6.0",
     "sequelize-cli": "^6.4.1",
     "supertest": "^6.1.6"
-  }
+  },
+  "description": "WebのMVCフレームワークを学習する為の、Express + Sequelize で構築したのBoilerplateです。 一般的なフレームワークが持っている機能を組み込んであります。",
+  "main": "app.js",
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KaitoYamaki/team_todo_app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KaitoYamaki/team_todo_app/issues"
+  },
+  "homepage": "https://github.com/KaitoYamaki/team_todo_app#readme"
 }
